<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="17dp"
            android:text="@string/tv_share_title"
            android:textColor="@color/colorTextWhite"
            android:background="@color/colorTheme"/>

        <RelativeLayout
            android:id="@+id/rl_share_back"
            android:layout_width="50dip"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_back_white_left" />
        </RelativeLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_share_content"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:text="@string/tv_share_content"/>
    <Button
        android:id="@+id/bt_share"
        android:layout_width="match_parent"
        android:layout_height="42dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="50dip"
        android:layout_marginBottom="20dip"
        android:background="@drawable/bt_login_click"
        android:text="@string/bt_share"
        android:textColor="@color/colorTextWhite"
        android:textSize="16dp" />

</LinearLayout>