<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainBackground"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="106dip"
            android:background="@color/colorTheme">

            <cn.xcom.helper.view.CircleImageView
                android:id="@+id/iv_fragment_me_head"
                android:layout_width="55dip"
                android:layout_height="55dip"
                android:layout_marginBottom="20dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="31dip"
                android:src="@mipmap/ic_me_head"
                app:border_color="@color/colorTextWhite"
                app:border_width="1dip" />

            <ImageView
                android:id="@+id/iv_fragment_me_gender"
                android:layout_width="16dip"
                android:layout_height="16dip"
                android:layout_marginLeft="15dip"
                android:layout_marginTop="38dip"
                android:layout_toRightOf="@id/iv_fragment_me_head"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_me_gender_man" />

            <TextView
                android:id="@+id/tv_fragment_me_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="39dip"
                android:layout_toRightOf="@id/iv_fragment_me_gender"
                android:text="@string/tv_fragment_me_name"
                android:textColor="@color/colorTextWhite"
                android:textSize="14dip" />

            <ImageView
                android:id="@+id/iv_fragment_me_phone"
                android:layout_width="16dip"
                android:layout_height="16dip"
                android:layout_marginBottom="25dip"
                android:layout_marginLeft="15dip"
                android:layout_marginTop="60dip"
                android:layout_toRightOf="@id/iv_fragment_me_head"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_me_phone" />

            <TextView
                android:id="@+id/tv_fragment_me_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="27dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="60dip"
                android:layout_toRightOf="@id/iv_fragment_me_gender"
                android:text="@string/tv_fragment_me_phone"
                android:textColor="@color/colorTextWhite"
                android:textSize="14dip" />

            <TextView
                android:id="@+id/tv_fragment_me_real_name"
                android:layout_width="103dip"
                android:layout_height="31dip"
                android:layout_alignParentRight="true"
                android:layout_marginTop="25dip"
                android:background="@drawable/tv_fragment_me_real_name"
                android:drawableLeft="@mipmap/ic_me_real_name"
                android:drawablePadding="10dip"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/tv_fragment_me_real_name"
                android:textColor="@color/colorTextWhite"
                android:textSize="14dip" />

            <TextView
                android:id="@+id/tv_fragment_me_real_baoxian"
                android:layout_width="103dip"
                android:layout_height="31dip"
                android:layout_alignParentRight="true"
                android:layout_marginTop="60dp"
                android:background="@drawable/tv_fragment_me_real_name"
                android:drawableLeft="@mipmap/ic_me_real_name"
                android:drawablePadding="10dip"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/tv_fragment_me_real_baoxian"
                android:textColor="@color/colorTextWhite"
                android:textSize="14dip" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_fragment_me_wallet"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@color/colorTextWhite"
                android:drawableLeft="@mipmap/ic_me_wallet"
                android:drawablePadding="10dip"
                android:gravity="center_vertical"
                android:paddingLeft="30dip"
                android:text="@string/tv_fragment_me_wallet"
                android:textSize="14dip" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="@color/colorLine"
                android:paddingBottom="9dp"
                android:paddingTop="9dp" />


            <TextView
                android:id="@+id/tv_fragment_me_sign"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@color/colorTextWhite"
                android:drawableLeft="@mipmap/ic_me_sign"
                android:drawablePadding="10dip"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/tv_fragment_me_sign"
                android:textSize="14dip" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="@color/colorLine"
                android:paddingBottom="9dp"
                android:paddingTop="9dp" />


            <TextView
                android:id="@+id/tv_fragment_me_message"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@color/colorTextWhite"
                android:drawableLeft="@mipmap/ic_me_message"
                android:drawablePadding="10dip"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/tv_fragment_me_message"
                android:textSize="14dip" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_fragment_me_bill"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_marginTop="1dip"
            android:background="@color/colorTextWhite"
            android:drawableLeft="@mipmap/ic_me_bill"
            android:drawablePadding="10dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/tv_fragment_me_bill"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/tv_fragment_me_coupon"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_marginTop="1dip"
            android:background="@color/colorTextWhite"
            android:drawableLeft="@mipmap/ic_me_coupon"
            android:drawablePadding="10dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/tv_fragment_me_order"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/tv_fragment_me_order"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_marginTop="1dip"
            android:background="@color/colorTextWhite"
            android:drawableLeft="@mipmap/ic_me_order"
            android:drawablePadding="10dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/tv_fragment_me_release"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/tv_fragment_me_collection"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_marginTop="1dip"
            android:background="@color/colorTextWhite"
            android:drawableLeft="@mipmap/ic_me_collection"
            android:drawablePadding="10dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/tv_fragment_me_collection"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/tv_fragment_me_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_marginTop="1dip"
            android:background="@color/colorTextWhite"
            android:drawableLeft="@mipmap/ic_me_shopping_cart"
            android:drawablePadding="10dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/tv_fragment_me_shopping_cart"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/tv_fragment_me_share2"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_marginTop="1dip"
            android:background="@color/colorTextWhite"
            android:drawableLeft="@mipmap/ic_me_address"
            android:drawablePadding="10dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/tv_fragment_me_share"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/tv_fragment_me_shopBuy"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_marginTop="1dip"
            android:background="@color/colorTextWhite"
            android:drawableLeft="@mipmap/ic_me_share"
            android:drawablePadding="10dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/tv_fragment_me_order_shop"
            android:textSize="14dip" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center_vertical"
            android:hint="@string/tv_fragment_me_sale"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/tv_fragment_me_order_taking"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_marginTop="1dip"
            android:background="@color/colorTextWhite"
            android:drawableLeft="@mipmap/ic_me_order_taking"
            android:drawablePadding="10dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/tv_fragment_me_order_taking"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/tv_fragment_me_insure"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_marginTop="1dip"
            android:background="@color/colorTextWhite"
            android:drawableLeft="@mipmap/ic_me_insure"
            android:drawablePadding="10dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/tv_fragment_me_insure"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/tv_fragment_me_adress"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_marginTop="1dip"
            android:background="@color/colorTextWhite"
            android:drawableLeft="@mipmap/ic_me_insure"
            android:drawablePadding="10dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/tv_fragment_me_address"
            android:textSize="14dip" />

        <LinearLayout
            android:id="@+id/ll_fragment_me_service_consulting"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_marginTop="10dip"
            android:background="@color/colorTextWhite"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:drawableLeft="@mipmap/ic_me_customer_service_consulting"
                android:drawablePadding="10dip"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/tv_fragment_me_customer_service_consulting"
                android:textSize="14dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingRight="20dp"
                android:text="@string/tv_fragment_me_customer_number" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_fragment_me_more_service"
            android:layout_width="match_parent"
            android:layout_height="46dip"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="1dip"
            android:background="@color/colorTextWhite"
            android:drawableLeft="@mipmap/ic_me_more_service"
            android:drawablePadding="10dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/tv_fragment_me_more_service"
            android:textSize="14dip" />

    </LinearLayout>
</ScrollView>