<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="17dp"
            android:text="@string/tv_address_list_title"
            android:textColor="@color/colorTextWhite"
            android:background="@color/colorTheme"/>

        <RelativeLayout
            android:id="@+id/rl_address_list_back"
            android:layout_width="50dip"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_back_white_left" />
        </RelativeLayout>
    </RelativeLayout>
    <ListView
        android:id="@+id/lv_address_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"/>
    <Button
        android:id="@+id/bt_address_list_add"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:background="@drawable/bt_system_message"
        android:text="@string/bt_address_list_add"
        android:textColor="@color/colorTextWhite"
        android:textSize="15dp" />
</LinearLayout>